# iana-media-types

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: cargo-release.yml  release.yml
iana-media-type/: Cargo.toml
iana-media-type-codegen/: Cargo.toml
iana-media-types/: Cargo.toml
iana-media-types-codegen/: Cargo.toml
iana-media-types-codegen/src/: main.rs
iana-media-types/src/: application.rs  audio.rs  font.rs  image.rs  lib.rs  message.rs  model.rs  multipart.rs  text.rs  video.rs
