[package]
name = "iana-media-types-codegen"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Media types generator based on IANA metadata"
documentation = "https://docs.rs/iana-media-types"
repository = "https://github.com/termoshtt/iana-media-types"
readme = "../README.md"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.66"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.103"
ureq = "2.5.0"
