[package]
name = "iana-media-types-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Media types generator based on IANA metadata"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.66"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.103"
ureq = "2.5.0"
